replace files with working files

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
+  "name": "plugin name",
+  "version": "0",
+  "description": "What do I do as an extension",
+  "background": {"page": "background.html"},
   "manifest_version": 2,
-
-  "name": "One-click Kittens",
-  "description": "This extension demonstrates a browser action with kittens.",
-  "version": "1.0",
-
-  "permissions": [
-    "https://secure.flickr.com/"
-  ],
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  }
+    "name": "Manipulate DOM",
+    "icons": ["icon.png"],
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [ {
+    "js": [ "jquery-2.0.2.min.js", "background.js" ],
+    "css": ["customStyles.css"],
+    "matches": [ "http://*/*", "https://*/*"]
+  }]
 }
