--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "default_icon": "icon.png"
   },
   "content_scripts": [ {
-    "js": [ "jquery-2.0.2.min.js", "background.js" ],
+    "js": [  "background.js" ],
     "css": ["customStyles.css"],
     "matches": [ "http://*/*", "https://*/*"]
   }]
