--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,9 @@
   "name": "plugin name",
   "version": "0",
   "description": "What do I do as an extension",
-  "background": {"page": "background.html"},
+  "background": {
+    "page": "background.html"
+    },
   "manifest_version": 2,
   "browser_action": {
     "name": "Manipulate DOM",
@@ -10,7 +12,7 @@
     "default_icon": "icon.png"
   },
   "content_scripts": [ {
-    "js": [  "background.js" ],
+    "js": [ "jquery.js", "background.js" ],
     "css": ["customStyles.css"],
     "matches": [ "http://*/*", "https://*/*"]
   }]
