--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,11 @@
   "browser_action": {
     "name": "Manipulate DOM",
     "icons": ["icon.png"],
-    "default_icon": "icon.png"
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "content_scripts": [ {
-    "js": [ "jquery.js", "background.js" ],
+    "js": [ "jquery.js", "content.js" ],
     "css": ["customStyles.css"],
     "matches": [ "http://*/*", "https://*/*"]
   }]
